# Research_agent00

./: README.md  pyproject.toml  report.md
src/agent_crew00/: crew.py  main.py
src/agent_crew00/config/: agents.yaml  tasks.yaml
