[project]
name = "agent_crew00"
version = "0.1.0"
description = "agent_crew00 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
agent_crew00 = "agent_crew00.main:run"
run_crew = "agent_crew00.main:run"
train = "agent_crew00.main:train"
replay = "agent_crew00.main:replay"
test = "agent_crew00.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
